gitops/clusters/homelab/apps/stable-diffusion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stable-diffusion
  labels:
    app.kubernetes.io/managed-by: flux
