gitops/clusters/homelab/apps/stable-diffusion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-webui
  namespace: stable-diffusion
spec:
  type: LoadBalancer
  selector:
    app: stable-diffusion-webui
  ports:
    - name: http
      port: 80
      targetPort: 7860
      protocol: TCP
