gitops/clusters/homelab/apps/stable-diffusion/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-diffusion-ingress
  namespace: stable-diffusion
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: stable-diffusion.app.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-diffusion-webui
            port:
              number: 80
